hphp/test/quick/dv_i0.php.expectf

Fatal error: syntax error, unexpected ')' in %s on line 3
